# lunaice

./: .coverage  .gitignore  README.md  pyproject.toml  session-ses_142d.md
configs/: cube.yaml  default.yaml  ice.yaml  labeling.yaml  processing.yaml
docs/: api.md  architecture.md
src/lunaice/: __init__.py  cli.py  config.py  pipeline.py
src/lunaice/cube/: __init__.py  builder.py  config.py  core.py  craters.py  pyramid.py  queries.py  sources.py  spatial.py
src/lunaice/ice/: __init__.py  config.py  engine.py
src/lunaice/ice/classification/: __init__.py  cloude_pottier.py
src/lunaice/ice/indicators/: __init__.py  base.py  cpr.py  dop.py  multi_freq.py  psr.py  roughness.py  scattering.py
src/lunaice/ice/output/: __init__.py  geojson.py  geotiff.py  visualization.py
src/lunaice/ice/scoring/: __init__.py  confidence.py  fusion.py
src/lunaice/ice/validation/: __init__.py  report.py  validator.py
src/lunaice/io/: __init__.py  reader.py  writer.py
src/lunaice/labeling/: __init__.py  config.py  data_models.py  engine.py
src/lunaice/labeling/conflict/: __init__.py  resolver.py
src/lunaice/labeling/functions/: __init__.py  base.py  lf_cpr.py  lf_dop.py  lf_illumination.py  lf_multi_freq.py  lf_psr.py  lf_published.py  lf_roughness.py  lf_scattering.py
src/lunaice/labeling/fusion/: __init__.py  label_model.py  majority.py  weighted.py
src/lunaice/labeling/output/: __init__.py  writers.py
src/lunaice/models/: __init__.py  schemas.py
src/lunaice/processing/: __init__.py  calibration.py  speckle.py
tests/: conftest.py  test_calibration.py  test_cube.py  test_ice.py  test_labeling.py  test_labeling_integration.py  test_pipeline.py  test_polarimetry.py  test_reader.py
(+9 files in other folders)
